--- a/performance_and_feedback_web/package.json
+++ b/performance_and_feedback_web/package.json
@@ -28,6 +28,8 @@
     "angular2-toaster": "^6.1.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-filter-pipe": "^0.1.10",
+    "ng2-search-filter": "^0.4.7",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.6",
     "rxjs": "^6.0.0",
